# osmium-engine

./: CMakeLists.txt
osmium-engine/: CMakeLists.txt  atom.cpp  atom.h  env.cpp  env.h  expr.cpp  expr.h  matcher.cpp  matcher.h  osmium-engine.cpp  osmium-engine.h  strings.h  symbol.cpp  symbol.h  symbol_expr.cpp  symbol_expr.h  symtab.cpp  symtab.h  system.inc  value.h  value_iterator.h
osmium-engine/matchers/: alternative.h  alternatives.cpp  alternatives.h  blank.cpp  blank.h  blank_sequence.cpp  blank_sequence.h  lambda_matcher.h  repeated.cpp  repeated.h
